[tool.poetry]
name = "cache_response"
version = "1.0.0"
description = "RFC 7234 compliant HTTP response caching with Cache-Control, conditional requests, and stale-while-revalidate support"
authors = []
readme = "README.md"
license = "MIT"
packages = [{include = "cache_response", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.extras]
redis = ["redis"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
mypy = "^1.8.0"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/cache_response"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80

[tool.mypy]
python_version = "3.9"
strict = false

[tool.ruff]
line-length = 100
target-version = "py39"
