[tool.poetry]
name = "console-print"
version = "1.0.0"
description = "Console printing with optional Rich support - falls back to standard logging if Rich unavailable"
authors = []
license = "MIT"
packages = [{include = "console_print", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
rich = {version = "^13.0.0", optional = true}

[tool.poetry.extras]
rich = ["rich"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
mypy = "^1.8.0"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/console_print"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80

[tool.mypy]
python_version = "3.9"
strict = false

[tool.ruff]
line-length = 100
target-version = "py39"
