[tool.poetry]
name = "fetch_rate_limiter"
version = "1.0.0"
description = "Standalone API rate limiter with queue management, priority scheduling, and distributed state support"
authors = []
license = "MIT"
packages = [{include = "fetch_rate_limiter", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.extras]
redis = ["redis"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
mypy = "^1.8.0"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/fetch_rate_limiter"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80

[tool.mypy]
python_version = "3.9"
strict = false

[tool.ruff]
line-length = 100
target-version = "py39"
